# SHELL

./: README.md
SHELL_PATH/: cat  kill  mkdir  rm
cat/: CMakeLists.txt  main.cpp  main.h
cp/: CMakeLists.txt  main.cpp  main.h
echo/: CMakeLists.txt  main.cpp  main.h
interactive-shell/: CMakeLists.txt  builtin_functions.cpp  builtin_functions.h  command.cpp  command.h  main.cpp  main.h  pathinfo.cpp  pathinfo.h
kill/: CMakeLists.txt  main.cpp  main.h
less/: CMakeLists.txt  main.cpp  main.h
ln/: CMakeLists.txt  main.cpp  main.h
ls/: CMakeLists.txt  main.cpp  main.h
mkdir/: CMakeLists.txt  main.cpp  main.h
mv/: CMakeLists.txt  main.cpp  main.h
rm/: CMakeLists.txt  main.cpp  main.h
test_path/: echo  ls
touch/: CMakeLists.txt  main.cpp  main.h
xargs/: CMakeLists.txt  main.cpp  main.h
